<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	tools:context="com.thinkdev.audiorecorder.app.main.MainActivity">
	<com.google.android.gms.ads.AdView
	android:id="@+id/adView"
	android:layout_below="@+id/toolbar_layout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:layout_marginBottom="2dp"
	android:visibility="visible"
	android:layout_marginTop="2dp"
	ads:adSize="SMART_BANNER"
	ads:adUnitId="@string/banner_home_footer">
	</com.google.android.gms.ads.AdView>
	<LinearLayout
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

		<ImageButton
				android:id="@+id/btn_import"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@null"
				android:layout_gravity="start"
				android:background="?android:selectableItemBackgroundBorderless"
				android:padding="@dimen/spacing_normal"
				android:src="@drawable/ic_import"/>

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_horizontal"
				android:layout_marginStart="@dimen/spacing_double"
				android:layout_marginEnd="@dimen/spacing_double"
				android:layout_marginTop="@dimen/spacing_medium"
				android:layout_marginBottom="@dimen/spacing_normal"
				android:textColor="@color/text_primary_light"
				android:textSize="@dimen/text_xlarge"
				android:textStyle="bold"
				android:text="@string/app_name"/>

		<ImageButton
				android:id="@+id/btn_share"
				android:layout_width="@dimen/bottom_pnl_small_btn_size"
				android:layout_height="@dimen/bottom_pnl_small_btn_size"
				android:adjustViewBounds="true"
				android:background="?android:selectableItemBackgroundBorderless"
				android:contentDescription="@null"
				android:layout_gravity="end"
				android:scaleType="center"
				android:src="@drawable/ic_more_vert"/>

	</LinearLayout>

	<LinearLayout
			android:id="@+id/pnl_import_progress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:visibility="invisible"
			android:orientation="horizontal"
			android:layout_marginBottom="@dimen/spacing_tiny"
			tools:visibility="visible">

		<ProgressBar
				style="?android:attr/progressBarStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_small"
				android:textColor="@color/white"
				android:textSize="@dimen/text_small"
				android:text="@string/import_progress"/>

	</LinearLayout>

	<LinearLayout
			android:id="@+id/pnl_record_processing"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:visibility="invisible"
			android:orientation="horizontal"
			android:layout_marginBottom="@dimen/spacing_tiny"
			tools:visibility="visible">

		<ProgressBar
				style="?android:attr/progressBarStyleSmall"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="@dimen/spacing_small"
				android:textColor="@color/white"
				android:textSize="@dimen/text_small"
				android:text="@string/record_processing"/>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical">

		<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				>

			<ImageView
					android:id="@+id/placeholder"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="gone"
					android:layout_gravity="center"
					tools:visibility="visible"/>

			<com.thinkdev.audiorecorder.app.widget.WaveformView
					android:id="@+id/record"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/waveform_height"
					android:layout_marginBottom="@dimen/notification_btn"
					/>

			<ProgressBar
					android:id="@+id/progress"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="invisible"
					android:layout_gravity="center"
					tools:visibility="visible"/>

			<ImageButton
					android:id="@+id/btn_play"
					android:layout_width="@dimen/notification_btn"
					android:layout_height="@dimen/notification_btn"
					android:adjustViewBounds="true"
					android:background="?android:selectableItemBackgroundBorderless"
					android:contentDescription="@null"
					android:layout_gravity="bottom|center"
					android:scaleType="center"
					android:visibility="invisible"
					android:src="@drawable/ic_play"/>

			<ImageButton
					android:id="@+id/btn_stop"
					android:layout_width="@dimen/notification_btn"
					android:layout_height="@dimen/notification_btn"
					android:adjustViewBounds="true"
					android:background="?android:selectableItemBackgroundBorderless"
					android:contentDescription="@null"
					android:layout_gravity="bottom|center"
					android:layout_marginStart="27dp"
					android:scaleType="center"
					android:visibility="gone"
					android:src="@drawable/ic_stop"/>
		</FrameLayout>

	</LinearLayout>

	<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<TextView
				android:id="@+id/txt_zero_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start|bottom"
				android:textColor="@color/text_primary_light"
				android:layout_marginStart="@dimen/spacing_normal"
				android:layout_marginBottom="@dimen/spacing_small"
				android:textSize="@dimen/text_medium"
				android:visibility="invisible"
				android:text="@string/zero_time"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

			<TextView
					android:id="@+id/txt_progress"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:textColor="@color/text_primary_light"
					android:textSize="54sp"
					android:textStyle="bold"
					tools:text="00:00"/>

			<TextView
					android:id="@+id/txt_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom|center_horizontal"
					android:gravity="center_horizontal"
					android:layout_marginStart="@dimen/spacing_xxdouble"
					android:layout_marginEnd="@dimen/spacing_xxdouble"
					android:layout_marginBottom="@dimen/spacing_tiny"
					android:drawableEnd="@drawable/ic_pencil_small"
					android:ellipsize="end"
					android:maxLines="2"
					android:textColor="@color/text_primary_light"
					android:textSize="22sp"
					android:visibility="invisible"
					tools:text="2019.12.30 12:12:23"
					tools:visibility="visible" />

			<TextView
					android:id="@+id/txt_record_info"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom|center_horizontal"
					android:layout_marginStart="@dimen/spacing_huge"
					android:layout_marginEnd="@dimen/spacing_huge"
					android:layout_marginBottom="@dimen/spacing_xsmall"
					android:ellipsize="end"
					android:maxLines="1"
					android:fontFamily="sans-serif-light"
					android:textColor="@color/text_primary_light2"
					android:textSize="@dimen/text_normal"
					tools:text="M4a, 44.1kHz, 128kbps, Stereo" />
		</LinearLayout>

		<TextView
				android:id="@+id/txt_duration"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end|bottom"
				android:textColor="@color/text_primary_light"
				android:layout_marginEnd="@dimen/spacing_normal"
				android:layout_marginBottom="@dimen/spacing_small"
				android:textSize="@dimen/text_medium"
				android:visibility="invisible"
				android:text="@string/zero_time"/>

	</FrameLayout>

	<SeekBar
			android:id="@+id/play_progress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:max="1000"
			android:progress="20"
			/>

	<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/spacing_small">

		<ImageButton
				android:id="@+id/btn_settings"
				android:layout_width="@dimen/bottom_pnl_btn_size"
				android:layout_height="@dimen/bottom_pnl_btn_size"
				android:layout_marginTop="@dimen/spacing_small"
				android:adjustViewBounds="true"
				android:background="?android:selectableItemBackgroundBorderless"
				android:layout_gravity="start"
				android:clickable="true"
				android:contentDescription="@string/settings"
				android:focusable="true"
				android:scaleType="centerInside"
				android:src="@drawable/ic_settings"/>

		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:orientation="horizontal">

			<ImageButton
					android:id="@+id/btn_record_delete"
					android:layout_width="@dimen/bottom_pnl_small_btn_size"
					android:layout_height="@dimen/bottom_pnl_small_btn_size"
					android:background="?android:selectableItemBackgroundBorderless"
					android:contentDescription="@string/delete"
					android:padding="@dimen/spacing_normal"
					android:layout_gravity="center"
					android:scaleType="center"
					android:visibility="invisible"
					android:src="@drawable/ic_delete_forever_36"/>

			<ImageButton
					android:id="@+id/btn_record"
					android:layout_width="@dimen/bottom_pnl_btn_size"
					android:layout_height="@dimen/bottom_pnl_btn_size"
					android:layout_margin="@dimen/spacing_small"
					android:adjustViewBounds="true"
					android:background="?android:selectableItemBackgroundBorderless"
					android:contentDescription="@string/recording"
					android:layout_gravity="center"
					android:scaleType="center"
					android:src="@drawable/ic_record"/>

			<ImageButton
					android:id="@+id/btn_record_stop"
					android:layout_width="@dimen/bottom_pnl_small_btn_size"
					android:layout_height="@dimen/bottom_pnl_small_btn_size"
					android:layout_gravity="center"
					android:adjustViewBounds="true"
					android:background="?android:selectableItemBackgroundBorderless"
					android:contentDescription="@null"
					android:padding="@dimen/spacing_normal"
					android:scaleType="center"
					android:src="@drawable/ic_stop"
					android:visibility="invisible" />

		</LinearLayout>

		<ImageButton
				android:id="@+id/btn_records_list"
				android:layout_width="@dimen/bottom_pnl_btn_size"
				android:layout_height="@dimen/bottom_pnl_btn_size"
				android:layout_marginTop="@dimen/spacing_small"
				android:adjustViewBounds="true"
				android:background="?android:selectableItemBackgroundBorderless"
				android:layout_gravity="end"
				android:contentDescription="@null"
				android:scaleType="centerInside"
				android:src="@drawable/ic_list"/>

	</FrameLayout>
	<com.google.android.gms.ads.AdView
		android:id="@+id/adView2"
		android:layout_below="@+id/toolbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginBottom="2dp"
		android:visibility="visible"
		android:layout_marginTop="2dp"
		ads:adSize="SMART_BANNER"
		ads:adUnitId="@string/banner_home_footer">
	</com.google.android.gms.ads.AdView>
</LinearLayout>
